--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.1</version>
+		</dependency>
 	</dependencies>
 </project>
